==================== libbonoboui 2.22.0 =====================

2008-03-10  Kjartan Maraas  <kmaraas@gnome.org>

	* NEWS: Update.
	* configure.in: Bump version.

==================== libbonoboui 2.21.90 ====================

2008-01-28  Kjartan Maraas  <kmaraas@gnome.org>

	* NEWS: Update
	* configure.in: Bump version.

2008-01-23  Kjartan Maraas  <kmaraas@gnome.org>

	* bonobo/Makefile.am: Link to popt
	* bonobo/bonobo-ui-init-gtk.c: #include <popt.h>
	* configure.in: Check for popt
	* tests/test-ui.c: (cb_do_hide_toolbar): Fix a leak.

2008-01-22  Tor Lillqvist  <tml@novell.com>

	* libbonoboui-zip.in: Look for catalogs in share/locale first, as
	that is where they will be with a properly built GNU gettext.

2007-11-13  Christian Persch  <chpe@gnome.org>

	* bonobo/bonobo-ui-util.c: (bonobo_help_display_cb): Restore the fix
	for bug #125046.

2007-11-13  Christian Persch  <chpe@gnome.org>

	* configure.in: Update version after branching.

2007-11-12  Kjartan Maraas  <kmaraas@gnome.org>

	* bonobo/bonobo-selector-widget.c: Remove redundant include.

2007-11-12  J.H.M. Dassen (Ray) <jdassen@debian.org>

	* bonobo/bonobo-ui-util.c: (bonobo_help_display_cb): Disabled the
	dialog for now due to breaking the string freeze.

2007-11-11  J.H.M. Dassen (Ray) <jdassen@debian.org>

	* bonobo/bonobo-ui-util.c: (bonobo_help_display_cb):
	  Use a dialog for the "Help not found" message. Bug #125046.
	  Patch from Matthias Clasen with correction from Christian Persch.

============================= 2.20.0 =====================

2007-08-19  Gilles Dartiguelongue  <gdartigu@svn.gnome.org>

	* samples/container/bonobo-sample-container.c: (main):
	* tests/Makefile.am:
	* tests/test-moniker.c: (main): move to GOption and fix a typoe
	in Makefile.am

============================= 2.19.6 =====================

2007-07-30  Christian Persch  <chpe@gnome.org>

	* autogen.sh:
	* configure.in: Build fixes.

2007-07-11  Christian Persch  <chpe@gnome.org>
